; ModuleID = '/home/carl/AnghaBench/jq/src/extr_lexer.c_jq_yypop_buffer_state.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_lexer.c_jq_yypop_buffer_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.yyguts_t = type { i64, i32 }

@YY_CURRENT_BUFFER = common dso_local global i64 0, align 8
@YY_CURRENT_BUFFER_LVALUE = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @yypop_buffer_state(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.yyguts_t*, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = inttoptr i64 %4 to %struct.yyguts_t*
  store %struct.yyguts_t* %5, %struct.yyguts_t** %3, align 8
  %6 = load i64, i64* @YY_CURRENT_BUFFER, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  br label %30

9:                                                ; preds = %1
  %10 = load i64, i64* @YY_CURRENT_BUFFER, align 8
  %11 = load i64, i64* %2, align 8
  %12 = call i32 @yy_delete_buffer(i64 %10, i64 %11)
  store i32* null, i32** @YY_CURRENT_BUFFER_LVALUE, align 8
  %13 = load %struct.yyguts_t*, %struct.yyguts_t** %3, align 8
  %14 = getelementptr inbounds %struct.yyguts_t, %struct.yyguts_t* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp sgt i64 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %9
  %18 = load %struct.yyguts_t*, %struct.yyguts_t** %3, align 8
  %19 = getelementptr inbounds %struct.yyguts_t, %struct.yyguts_t* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = add nsw i64 %20, -1
  store i64 %21, i64* %19, align 8
  br label %22

22:                                               ; preds = %17, %9
  %23 = load i64, i64* @YY_CURRENT_BUFFER, align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %30

25:                                               ; preds = %22
  %26 = load i64, i64* %2, align 8
  %27 = call i32 @yy_load_buffer_state(i64 %26)
  %28 = load %struct.yyguts_t*, %struct.yyguts_t** %3, align 8
  %29 = getelementptr inbounds %struct.yyguts_t, %struct.yyguts_t* %28, i32 0, i32 1
  store i32 1, i32* %29, align 8
  br label %30

30:                                               ; preds = %8, %25, %22
  ret void
}

declare dso_local i32 @yy_delete_buffer(i64, i64) #1

declare dso_local i32 @yy_load_buffer_state(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
